--- a/kafka-consumer-example/src/main/resources/application.yml
+++ b/kafka-consumer-example/src/main/resources/application.yml
@@ -1,8 +1,15 @@
-spring:
-  kafka:
-    consumer:
-      bootstrap-servers: localhost:9092
-      group-id: test-group
+#spring:
+#  kafka:
+#    consumer:
+#      bootstrap-servers: localhost:9092
+#      group-id: test-group-1
+#      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+#      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+#      properties:
+#        spring:
+#          json:
+#            trusted:
+#              packages: com.test.kafkaproducerexample.dto
 
 server:
   port: 9292
